--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       background: transparent;
     }
 
-    /* ✅ پروفایل دایره‌ای با Halo Glow */
+    /* ✅ پروفایل دایره‌ای با حرکت نرم خودکار */
     .profile-container {
       position: relative;
       width: 180px;
@@ -49,52 +49,38 @@
     }
 
     .profile-pic {
+      position: relative;
       width: 100%;
       height: 100%;
-      border-radius: 50%;
       overflow: hidden;
-      position: relative;
-      z-index: 2;
-      box-shadow: 0 0 25px rgba(255, 215, 0, 0.3);
-      transition: transform 0.3s ease;
+      border-radius: 50%;
+      box-shadow: 0 0 25px rgba(255, 215, 0, 0.25);
+      animation: floatMove 6s ease-in-out infinite;
     }
 
     .profile-pic img {
       width: 100%;
       height: 100%;
       object-fit: cover;
-      border-radius: 50%;
+      display: block;
     }
 
-    .halo {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 220px;
-      height: 220px;
-      border-radius: 50%;
-      background: radial-gradient(circle, rgba(255,215,0,0.4) 0%, rgba(255,215,0,0) 70%);
-      transform: translate(-50%, -50%);
-      filter: blur(25px);
-      animation: pulse 4s infinite alternate;
-      z-index: 1;
-      pointer-events: none;
-    }
-
-    @keyframes pulse {
-      from {
-        transform: translate(-50%, -50%) scale(1);
-        opacity: 0.6;
+    @keyframes floatMove {
+      0% {
+        transform: translate(0, 0);
       }
-      to {
-        transform: translate(-50%, -50%) scale(1.15);
-        opacity: 1;
+      25% {
+        transform: translate(4px, -6px);
       }
-    }
-
-    .profile-container:hover .profile-pic {
-      transform: scale(1.05);
-      box-shadow: 0 0 35px rgba(255, 220, 120, 0.8);
+      50% {
+        transform: translate(0, -10px);
+      }
+      75% {
+        transform: translate(-4px, -6px);
+      }
+      100% {
+        transform: translate(0, 0);
+      }
     }
 
     /* ✅ عنوان */
@@ -248,6 +234,12 @@
       0%,100%{text-shadow:0 0 10px rgba(255,211,108,0.6);}
       50%{text-shadow:0 0 22px rgba(255,211,108,1);}
     }
+    @media(max-width:768px){
+      .profile-container{width:130px;height:130px;}
+      .title-line{font-size:2rem;}
+      .title-sub{font-size:1rem;}
+      .link-bar a{font-size:0.85rem;padding:8px 14px;}
+    }
   </style>
 </head>
 <body>
@@ -259,8 +251,7 @@
   </div>
 
   <div class="profile-container">
-    <div class="halo" id="halo"></div>
-    <div class="profile-pic">
+    <div class="profile-pic" id="profile-pic">
       <img src="https://bayanbox.ir/view/6333081801587349279/Saeed2.jpg" alt="Dr. Saeed Mojtabazadeh">
     </div>
   </div>
@@ -282,7 +273,6 @@
   </div>
 
   <script>
-    // ✅ داده زبان‌ها
     const data = {
       fa: {
         title:"مسیر علم و زندگی: روایت دکتر سعید مجتبی‌زاده",
@@ -352,13 +342,35 @@
     document.getElementById("btn-fa").addEventListener("click",()=>switchLang("fa"));
     document.getElementById("btn-en").addEventListener("click",()=>switchLang("en"));
 
-    // ✅ افکت هاله با حرکت موس
-    const halo=document.getElementById("halo");
-    document.addEventListener("mousemove",e=>{
-      const x=(e.clientX/window.innerWidth-0.5)*100;
-      const y=(e.clientY/window.innerHeight-0.5)*100;
-      halo.style.transform=`translate(-50%, -50%) rotateX(${y/10}deg) rotateY(${x/10}deg)`;
-    });
+    // ✅ افکت ذرات پس‌زمینه
+    const canvas=document.getElementById("particles");
+    const ctx=canvas.getContext("2d");
+    let particles=[];
+    function resizeCanvas(){
+      canvas.width=window.innerWidth;
+      canvas.height=window.innerHeight;
+    }
+    window.addEventListener("resize",resizeCanvas);
+    resizeCanvas();
+
+    for(let i=0;i<80;i++){
+      particles.push({x:Math.random()*canvas.width,y:Math.random()*canvas.height,r:Math.random()*2+1,dx:(Math.random()-0.5)*0.5,dy:(Math.random()-0.5)*0.5});
+    }
+
+    function drawParticles(){
+      ctx.clearRect(0,0,canvas.width,canvas.height);
+      ctx.fillStyle="rgba(255,220,150,0.8)";
+      particles.forEach(p=>{
+        ctx.beginPath();
+        ctx.arc(p.x,p.y,p.r,0,Math.PI*2);
+        ctx.fill();
+        p.x+=p.dx; p.y+=p.dy;
+        if(p.x<0||p.x>canvas.width)p.dx*=-1;
+        if(p.y<0||p.y>canvas.height)p.dy*=-1;
+      });
+      requestAnimationFrame(drawParticles);
+    }
+    drawParticles();
   </script>
 </body>
 </html>
