--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="keywords" content="دکتر سعید مجتبی‌زاده, Saeed Mojtabazadeh, ژئوتکنیک, پژوهشگر, نوآوری علمی">
   <meta name="author" content="Saeed Mojtabazadeh">
 
+  <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/mojtabazadeh/instagallery.github.io/refs/heads/main/Favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
@@ -257,8 +258,8 @@
   </div>
 
   <div class="title-wrapper">
-    <h1 class="title-line" id="main-title">مسیر علم و زندگی: روایت دکتر سعید مجتبی‌زاده</h1>
-    <h2 class="title-sub" id="sub-title">علم، اندیشه و نوآوری</h2>
+    <h1 class="title-line" id="main-title">مسیر علم و زندگی</h1>
+    <h2 class="title-sub" id="sub-title">روایت علم، اندیشه و نوآوری دکتر سعید مجتبی‌زاده</h2>
   </div>
 
   <div class="link-bar" id="links"></div>
@@ -275,8 +276,8 @@
   <script>
     const data = {
       fa: {
-        title:"مسیر علم و زندگی: روایت دکتر سعید مجتبی‌زاده",
-        sub:"علم، اندیشه و نوآوری",
+        title:"مسیر علم و زندگی",
+        sub:"روایت علم، اندیشه و نوآوری دکتر سعید مجتبی‌زاده",
         links:[
           {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
           {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
@@ -289,8 +290,8 @@
         ]
       },
       en: {
-        title:"The Journey of Science and Life: The Story of Dr. Saeed Mojtabazadeh",
-        sub:"Science, Insights & Innovation",
+        title:"The Journey of Science and Life",
+        sub:"The Story of Science, Insights & Innovation by Dr. Saeed Mojtabazadeh",
         links:[
           {text:"Personal Website",href:"http://mojtabazadeh.ir/"},
           {text:"Research Articles",href:"http://www.drmojtabazadeh.ir/"},
