--- a/index.html
+++ b/index.html
@@ -3,243 +3,131 @@
 <head>
   <meta charset="UTF-8">
   <title>مسیر علم و زندگی: روایت دکتر سعید مجتبی‌زاده</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
   <meta name="description" content="پایگاه رسمی دکتر سعید مجتبی‌زاده | روایت مسیر علم و زندگی در پژوهش و نوآوری.">
   <meta name="keywords" content="دکتر سعید مجتبی‌زاده, Saeed Mojtabazadeh, ژئوتکنیک, پژوهشگر, نوآوری علمی">
   <meta name="author" content="Saeed Mojtabazadeh">
 
-  <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/mojtabazadeh/instagallery.github.io/refs/heads/main/Favicon.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;600;800&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
+    * {box-sizing:border-box;margin:0;padding:0}
     body {
-      margin: 0;
-      padding: 20px 10px 40px 10px;
-      font-family: 'Vazirmatn', sans-serif;
-      background: #000;
-      color: white;
-      overflow-x: hidden;
-      transition: opacity 0.6s ease-in-out;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
+      font-family:'Vazirmatn',sans-serif;
+      background:#000;
+      color:white;
+      text-align:center;
+      overflow-x:hidden;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      padding:20px 10px 40px;
     }
-    body.lang-en {
-      font-family: 'Poppins', sans-serif;
-      direction: ltr;
-      text-align: left;
-    }
+    body.lang-en {font-family:'Poppins',sans-serif;direction:ltr;text-align:center}
 
     #particles {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      z-index: -1;
-      background: transparent;
+      position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;
     }
 
-    /* ✅ پروفایل دایره‌ای با حرکت نرم خودکار */
+    /* ✅ عکس پروفایل با افکت نرم */
     .profile-container {
-      position: relative;
-      width: 180px;
-      height: 180px;
-      margin: 30px auto 18px;
+      width:150px;height:150px;margin:25px auto 16px;
+      border-radius:50%;overflow:hidden;
+      box-shadow:0 8px 22px rgba(255,220,150,0.5);
+      animation:floatMove 6s ease-in-out infinite;
     }
-
-    .profile-pic {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      border-radius: 50%;
-      box-shadow: 0 0 25px rgba(255, 215, 0, 0.25);
-      animation: floatMove 6s ease-in-out infinite;
+    .profile-container img {
+      width:100%;height:100%;object-fit:cover;display:block;
     }
-
-    .profile-pic img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
-    }
-
     @keyframes floatMove {
-      0% {
-        transform: translate(0, 0);
-      }
-      25% {
-        transform: translate(4px, -6px);
-      }
-      50% {
-        transform: translate(0, -10px);
-      }
-      75% {
-        transform: translate(-4px, -6px);
-      }
-      100% {
-        transform: translate(0, 0);
-      }
+      0%,100%{transform:translateY(0)}
+      50%{transform:translateY(-6px)}
     }
 
     /* ✅ عنوان */
     .title-wrapper {
-      text-align: center;
-      margin-bottom: 30px;
-      animation: fadeInUp 1s ease-out forwards;
-      opacity: 0;
-      transform: translateY(-20px);
-      max-width: 95vw;
-      user-select: none;
+      max-width:90vw;margin-bottom:20px;
+      animation:fadeInUp 1s ease forwards;opacity:0;transform:translateY(10px);
     }
     .title-line {
-      font-weight: 800;
-      font-size: 2.6rem;
-      background: linear-gradient(90deg, #fff2a8, #ffc94d, #ffb400);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      text-shadow: 0 0 18px rgba(255, 211, 108, 0.6);
-      animation: glowPulse 4s ease-in-out infinite;
-      margin-bottom: 6px;
+      font-size:clamp(1.6rem,5vw,2.4rem);
+      font-weight:800;
+      background:linear-gradient(90deg,#fff2a8,#ffc94d,#ffb400);
+      -webkit-background-clip:text;-webkit-text-fill-color:transparent;
+      text-shadow:0 0 12px rgba(255,211,108,0.6);
+      animation:glowPulse 4s ease-in-out infinite;
     }
     .title-sub {
-      font-size: 1.2rem;
-      color: #ffddaa;
-      font-weight: 600;
-      margin-top: 0;
-      text-shadow: 0 1px 3px rgba(0,0,0,0.5);
+      font-size:clamp(1rem,3vw,1.2rem);
+      color:#ffddaa;
+      font-weight:600;
+      margin-top:4px;
+      text-shadow:0 1px 3px rgba(0,0,0,0.4);
     }
 
-    /* ✅ نوار لینک */
+    /* ✅ لینک‌ها */
     .link-bar {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 12px;
-      margin-bottom: 18px;
-      animation: fadeInUp 1.4s ease-out forwards;
-      opacity: 0;
-      transform: translateY(-20px);
-      max-width: 95vw;
+      display:flex;flex-wrap:wrap;justify-content:center;
+      gap:10px;max-width:95vw;margin-bottom:16px;
+      animation:fadeInUp 1.2s ease forwards;opacity:0;transform:translateY(10px);
     }
     .link-bar a {
-      background: rgba(255,255,255,0.12);
-      color: white;
-      padding: 10px 18px;
-      border-radius: 30px;
-      text-decoration: none;
-      font-weight: 500;
-      font-size: 0.95rem;
-      backdrop-filter: blur(3px);
-      transition: all 0.3s ease;
-      box-shadow: 0 0 10px rgba(255,200,100,0.3);
+      background:rgba(255,255,255,0.1);
+      color:white;
+      padding:8px 14px;
+      border-radius:25px;
+      font-size:clamp(0.8rem,3vw,0.95rem);
+      text-decoration:none;
+      transition:all 0.3s ease;
     }
     .link-bar a:hover {
-      background: rgba(255,255,255,0.25);
-      box-shadow: 0 0 20px rgba(255,200,100,0.7);
-      transform: translateY(-3px);
+      background:rgba(255,255,255,0.25);
+      box-shadow:0 0 12px rgba(255,200,100,0.7);
+      transform:translateY(-2px);
     }
 
     /* ✅ ویدیو */
     .frame-wrapper {
-      margin: 0 auto;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 95%;
-      max-width: 1024px;
-      aspect-ratio: 16/9;
-      border-radius: 20px;
-      overflow: hidden;
-      box-shadow: 0 12px 40px rgba(0,0,0,0.5);
-      animation: fadeInUp 1.6s ease-out forwards;
-      opacity: 0;
-      transform: translateY(20px);
-      background: rgba(0,0,0,0.25);
-      backdrop-filter: blur(6px);
-      user-select: none;
+      width:95%;max-width:900px;aspect-ratio:16/9;
+      border-radius:16px;overflow:hidden;
+      margin-top:10px;
+      background:rgba(0,0,0,0.25);backdrop-filter:blur(4px);
+      animation:fadeInUp 1.4s ease forwards;opacity:0;transform:translateY(10px);
     }
     .frame-wrapper iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-      display: block;
-      border-radius: 20px;
+      width:100%;height:100%;border:none;display:block;border-radius:16px;
     }
 
     /* ✅ فوتر */
     .footer {
-      margin-top: 24px;
-      color: white;
-      font-size: 0.9rem;
-      opacity: 0.7;
-      text-align: center;
-      user-select: none;
+      font-size:0.8rem;margin-top:18px;opacity:0.7;
     }
-    .footer a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-    }
+    .footer a {color:white;text-decoration:none}
 
     /* ✅ دکمه زبان */
     .lang-switch {
-      position: fixed;
-      top: 16px;
-      left: 16px;
-      display: flex;
-      gap: 8px;
-      z-index: 999;
-      user-select: none;
+      position:fixed;top:12px;left:12px;display:flex;gap:6px;z-index:99;
     }
     .lang-switch button {
-      position: relative;
-      background: rgba(255,255,255,0.15);
-      color: white;
-      border: none;
-      padding: 8px 14px;
-      border-radius: 50px;
-      cursor: pointer;
-      font-weight: 700;
-      font-size: 0.9rem;
-      transition: all 0.3s ease;
-      overflow: hidden;
-      box-shadow: 0 0 10px rgba(255,215,0,0.3);
+      background:rgba(255,255,255,0.15);
+      color:white;border:none;padding:6px 12px;
+      border-radius:50px;cursor:pointer;font-size:0.8rem;
+      transition:all 0.3s ease;
     }
     .lang-switch button:hover {
-      background: rgba(255,255,255,0.3);
-      box-shadow: 0 0 20px rgba(255,215,0,0.7);
-      transform: scale(1.1);
-    }
-    .lang-switch button:after {
-      content: "";
-      position: absolute;
-      width: 0;
-      height: 0;
-      top: 50%;
-      left: 50%;
-      background: rgba(255,215,0,0.3);
-      border-radius: 50%;
-      transform: translate(-50%,-50%);
-      transition: width 0.5s ease, height 0.5s ease;
-    }
-    .lang-switch button:active:after {
-      width: 120px;
-      height: 120px;
+      background:rgba(255,255,255,0.3);transform:scale(1.05);
     }
 
-    @keyframes fadeInUp {to {opacity:1;transform:translateY(0);}}
+    @keyframes fadeInUp {to {opacity:1;transform:translateY(0)}}
     @keyframes glowPulse {
-      0%,100%{text-shadow:0 0 10px rgba(255,211,108,0.6);}
-      50%{text-shadow:0 0 22px rgba(255,211,108,1);}
+      0%,100%{text-shadow:0 0 8px rgba(255,211,108,0.6)}
+      50%{text-shadow:0 0 14px rgba(255,211,108,1)}
     }
-    @media(max-width:768px){
-      .profile-container{width:130px;height:130px;}
-      .title-line{font-size:2rem;}
-      .title-sub{font-size:1rem;}
-      .link-bar a{font-size:0.85rem;padding:8px 14px;}
+
+    @media(max-width:480px){
+      .profile-container{width:120px;height:120px}
+      .link-bar{gap:6px}
+      .link-bar a{padding:6px 10px}
     }
   </style>
 </head>
@@ -252,14 +140,12 @@
   </div>
 
   <div class="profile-container">
-    <div class="profile-pic" id="profile-pic">
-      <img src="https://bayanbox.ir/view/6333081801587349279/Saeed2.jpg" alt="Dr. Saeed Mojtabazadeh">
-    </div>
+    <img src="https://bayanbox.ir/view/6333081801587349279/Saeed2.jpg" alt="Dr. Saeed Mojtabazadeh">
   </div>
 
   <div class="title-wrapper">
-    <h1 class="title-line" id="main-title">مسیر علم و زندگی</h1>
-    <h2 class="title-sub" id="sub-title">روایت علم، اندیشه و نوآوری دکتر سعید مجتبی‌زاده</h2>
+    <h1 class="title-line" id="main-title">مسیر علم و زندگی: روایت دکتر سعید مجتبی‌زاده</h1>
+    <h2 class="title-sub" id="sub-title">علم، اندیشه و نوآوری</h2>
   </div>
 
   <div class="link-bar" id="links"></div>
@@ -274,104 +160,71 @@
   </div>
 
   <script>
+    // ✅ داده زبان‌ها
     const data = {
-      fa: {
-        title:"مسیر علم و زندگی",
-        sub:"روایت علم، اندیشه و نوآوری دکتر سعید مجتبی‌زاده",
-        links:[
-          {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
-          {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
-          {text:"پایگاه مطالعات",href:"http://www.smojtabazadeh.ir/"},
-          {text:"پایگاه اینستاگالری",href:"http://www.instagallery.ir/"},
-          {text:"پایگاه اَپرچِر",href:"http://www.mojtabazadeh-hasanlouei.ir/"},
-          {text:"پایگاه انگلیسی",href:"https://www.mojtabazade.ir/"},
-          {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
-          {text:"پایگاه اورکید",href:"https://orcid.org/0000-0001-8508-4837"},
-        ]
-      },
-      en: {
-        title:"The Journey of Science and Life",
-        sub:"The Story of Science, Insights & Innovation by Dr. Saeed Mojtabazadeh",
-        links:[
-          {text:"Personal Website",href:"http://mojtabazadeh.ir/"},
-          {text:"Research Articles",href:"http://www.drmojtabazadeh.ir/"},
-          {text:"Study Hub",href:"http://www.smojtabazadeh.ir/"},
-          {text:"Instagallery",href:"http://www.instagallery.ir/"},
-          {text:"Aperture Hub",href:"http://www.mojtabazadeh-hasanlouei.ir/"},
-          {text:"English Site",href:"https://www.mojtabazade.ir/"},
-          {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
-          {text:"ORCID Profile",href:"https://orcid.org/0000-0001-8508-4837"},
-        ]
-      }
+      fa:{title:"مسیر علم و زندگی: روایت دکتر سعید مجتبی‌زاده",sub:"علم، اندیشه و نوآوری",links:[
+        {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
+        {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
+        {text:"پایگاه مطالعات",href:"http://www.smojtabazadeh.ir/"},
+        {text:"پایگاه اینستاگالری",href:"http://www.instagallery.ir/"},
+        {text:"پایگاه اَپرچِر",href:"http://www.mojtabazadeh-hasanlouei.ir/"},
+        {text:"پایگاه انگلیسی",href:"https://www.mojtabazade.ir/"},
+        {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
+        {text:"پایگاه اورکید",href:"https://orcid.org/0000-0001-8508-4837"},
+      ]},
+      en:{title:"The Journey of Science and Life: The Story of Dr. Saeed Mojtabazadeh",sub:"Science, Thought & Innovation",links:[
+        {text:"Personal Website",href:"http://mojtabazadeh.ir/"},
+        {text:"Research Articles",href:"http://www.drmojtabazadeh.ir/"},
+        {text:"Study Hub",href:"http://www.smojtabazadeh.ir/"},
+        {text:"Instagallery",href:"http://www.instagallery.ir/"},
+        {text:"Aperture Hub",href:"http://www.mojtabazadeh-hasanlouei.ir/"},
+        {text:"English Site",href:"https://www.mojtabazade.ir/"},
+        {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
+        {text:"ORCID Profile",href:"https://orcid.org/0000-0001-8508-4837"},
+      ]}
     };
-
-    const mainTitle=document.getElementById("main-title");
-    const subTitle=document.getElementById("sub-title");
-    const linksContainer=document.getElementById("links");
-
+    const mainTitle=document.getElementById("main-title"),
+          subTitle=document.getElementById("sub-title"),
+          linksContainer=document.getElementById("links");
     function buildLinks(lang){
       linksContainer.innerHTML="";
-      data[lang].links.forEach(link=>{
+      data[lang].links.forEach(l=>{
         const a=document.createElement("a");
-        a.href=link.href;
-        a.target="_blank";
-        a.textContent=link.text;
+        a.href=l.href;a.target="_blank";a.textContent=l.text;
         linksContainer.appendChild(a);
       });
     }
-
     function switchLang(lang){
       document.body.style.opacity=0;
       setTimeout(()=>{
         mainTitle.textContent=data[lang].title;
         subTitle.textContent=data[lang].sub;
         buildLinks(lang);
-        if(lang==="en"){
-          document.body.classList.add("lang-en");
-          document.documentElement.lang="en";
-          document.documentElement.dir="ltr";
-        } else {
-          document.body.classList.remove("lang-en");
-          document.documentElement.lang="fa";
-          document.documentElement.dir="rtl";
-        }
+        if(lang==="en"){document.body.classList.add("lang-en");document.documentElement.dir="ltr"}
+        else{document.body.classList.remove("lang-en");document.documentElement.dir="rtl"}
         document.body.style.opacity=1;
-      },400);
+      },300);
     }
-
     buildLinks("fa");
-    document.getElementById("btn-fa").addEventListener("click",()=>switchLang("fa"));
-    document.getElementById("btn-en").addEventListener("click",()=>switchLang("en"));
+    document.getElementById("btn-fa").onclick=()=>switchLang("fa");
+    document.getElementById("btn-en").onclick=()=>switchLang("en");
 
     // ✅ افکت ذرات پس‌زمینه
-    const canvas=document.getElementById("particles");
-    const ctx=canvas.getContext("2d");
-    let particles=[];
-    function resizeCanvas(){
-      canvas.width=window.innerWidth;
-      canvas.height=window.innerHeight;
-    }
-    window.addEventListener("resize",resizeCanvas);
-    resizeCanvas();
-
-    for(let i=0;i<80;i++){
-      particles.push({x:Math.random()*canvas.width,y:Math.random()*canvas.height,r:Math.random()*2+1,dx:(Math.random()-0.5)*0.5,dy:(Math.random()-0.5)*0.5});
-    }
-
-    function drawParticles(){
+    const canvas=document.getElementById("particles"),ctx=canvas.getContext("2d");
+    function resize(){canvas.width=innerWidth;canvas.height=innerHeight}
+    addEventListener("resize",resize);resize();
+    const particles=Array.from({length:60},()=>({x:Math.random()*canvas.width,y:Math.random()*canvas.height,r:Math.random()*1.8+1,dx:(Math.random()-0.5)*0.4,dy:(Math.random()-0.5)*0.4}));
+    (function draw(){
       ctx.clearRect(0,0,canvas.width,canvas.height);
       ctx.fillStyle="rgba(255,220,150,0.8)";
       particles.forEach(p=>{
-        ctx.beginPath();
-        ctx.arc(p.x,p.y,p.r,0,Math.PI*2);
-        ctx.fill();
-        p.x+=p.dx; p.y+=p.dy;
+        ctx.beginPath();ctx.arc(p.x,p.y,p.r,0,Math.PI*2);ctx.fill();
+        p.x+=p.dx;p.y+=p.dy;
         if(p.x<0||p.x>canvas.width)p.dx*=-1;
         if(p.y<0||p.y>canvas.height)p.dy*=-1;
       });
-      requestAnimationFrame(drawParticles);
-    }
-    drawParticles();
+      requestAnimationFrame(draw);
+    })();
   </script>
 </body>
 </html>
