--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
   <script>
     // ✅ داده زبان‌ها
     const data = {
-      fa:{title:"مسیر علم و زندگی: روایت دکتر سعید مجتبی‌زاده",sub:"علم، اندیشه و نوآوری",links:[
+      fa:{title:"مسیر علم و زندگی",sub:"روایت علم، اندیشه و نوآوری دکتر سعید مجتبی‌زاده",links:[
         {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
         {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
         {text:"پایگاه مطالعات",href:"http://www.smojtabazadeh.ir/"},
@@ -172,7 +172,7 @@
         {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
         {text:"پایگاه اورکید",href:"https://orcid.org/0000-0001-8508-4837"},
       ]},
-      en:{title:"The Journey of Science and Life: The Story of Dr. Saeed Mojtabazadeh",sub:"Science, Thought & Innovation",links:[
+      en:{title:"The Professional Journey",sub:"by Dr. Saeed Mojtabazadeh",links:[
         {text:"Personal Website",href:"http://mojtabazadeh.ir/"},
         {text:"Research Articles",href:"http://www.drmojtabazadeh.ir/"},
         {text:"Study Hub",href:"http://www.smojtabazadeh.ir/"},
