--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
   </div>
 
   <div class="title-wrapper">
-    <h1 class="title-line" id="main-title">مسیر علم و زندگی: روایت دکتر سعید مجتبی‌زاده</h1>
-    <h2 class="title-sub" id="sub-title">علم، اندیشه و نوآوری</h2>
+    <h1 class="title-line" id="main-title">مسیر علم و زندگی</h1>
+    <h2 class="title-sub" id="sub-title">روایت علم، اندیشه و نوآوری دکتر سعید مجتبی‌زاده</h2>
   </div>
 
   <div class="link-bar" id="links"></div>
@@ -172,7 +172,7 @@
         {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
         {text:"پایگاه اورکید",href:"https://orcid.org/0000-0001-8508-4837"},
       ]},
-      en:{title:"The Professional Journey",sub:"by Dr. Saeed Mojtabazadeh",links:[
+      en:{title:"The Professional Journey",sub:"of Dr. Saeed Mojtabazadeh",links:[
         {text:"Personal Website",href:"http://mojtabazadeh.ir/"},
         {text:"Research Articles",href:"http://www.drmojtabazadeh.ir/"},
         {text:"Study Hub",href:"http://www.smojtabazadeh.ir/"},
