--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <meta name="keywords" content="دکتر سعید مجتبی‌زاده, Saeed Mojtabazadeh, ژئوتکنیک, پژوهشگر, نوآوری علمی">
   <meta name="author" content="Saeed Mojtabazadeh">
 
-  <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/mojtabazadeh/instagallery.github.io/refs/heads/main/Favicon.ico">
+  <!-- ✅ Favicon استاندارد دایره‌ای -->
+  <link rel="icon" type="image/png" sizes="512x512" href="https://raw.githubusercontent.com/mojtabazadeh/instagallery.github.io/refs/heads/main/Favicon.png">
+
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;600;800&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
-    * {box-sizing:border-box;margin:0;padding:0}
+    *{box-sizing:border-box;margin:0;padding:0}
     body {
       font-family:'Vazirmatn',sans-serif;
       background:#000;
@@ -23,8 +25,9 @@
       flex-direction:column;
       align-items:center;
       padding:20px 10px 40px;
+      transition:all 0.6s ease;
     }
-    body.lang-en {font-family:'Poppins',sans-serif;direction:ltr;text-align:center}
+    body.lang-en{font-family:'Poppins',sans-serif;direction:ltr;text-align:center}
 
     #particles {
       position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;
@@ -37,9 +40,7 @@
       box-shadow:0 8px 22px rgba(255,220,150,0.5);
       animation:floatMove 6s ease-in-out infinite;
     }
-    .profile-container img {
-      width:100%;height:100%;object-fit:cover;display:block;
-    }
+    .profile-container img {width:100%;height:100%;object-fit:cover;display:block}
     @keyframes floatMove {
       0%,100%{transform:translateY(0)}
       50%{transform:translateY(-6px)}
@@ -119,6 +120,16 @@
       background:rgba(255,255,255,0.3);transform:scale(1.05);
     }
 
+    /* ✅ افکت تغییر زبان (Flip+Blur) */
+    body.switching {
+      animation:langFlip 0.8s ease forwards;
+    }
+    @keyframes langFlip {
+      0% {transform:rotateY(0deg);filter:blur(0px) brightness(1)}
+      50%{transform:rotateY(90deg);filter:blur(3px) brightness(1.3)}
+      100%{transform:rotateY(0deg);filter:blur(0px) brightness(1)}
+    }
+
     @keyframes fadeInUp {to {opacity:1;transform:translateY(0)}}
     @keyframes glowPulse {
       0%,100%{text-shadow:0 0 8px rgba(255,211,108,0.6)}
@@ -184,9 +195,11 @@
         {text:"ORCID Profile",href:"https://orcid.org/0000-0001-8508-4837"},
       ]}
     };
+
     const mainTitle=document.getElementById("main-title"),
           subTitle=document.getElementById("sub-title"),
           linksContainer=document.getElementById("links");
+
     function buildLinks(lang){
       linksContainer.innerHTML="";
       data[lang].links.forEach(l=>{
@@ -195,17 +208,24 @@
         linksContainer.appendChild(a);
       });
     }
+
     function switchLang(lang){
-      document.body.style.opacity=0;
+      document.body.classList.add("switching");
       setTimeout(()=>{
         mainTitle.textContent=data[lang].title;
         subTitle.textContent=data[lang].sub;
         buildLinks(lang);
-        if(lang==="en"){document.body.classList.add("lang-en");document.documentElement.dir="ltr"}
-        else{document.body.classList.remove("lang-en");document.documentElement.dir="rtl"}
-        document.body.style.opacity=1;
-      },300);
+        if(lang==="en"){
+          document.body.classList.add("lang-en");
+          document.documentElement.dir="ltr";
+        } else {
+          document.body.classList.remove("lang-en");
+          document.documentElement.dir="rtl";
+        }
+        document.body.classList.remove("switching");
+      },400);
     }
+
     buildLinks("fa");
     document.getElementById("btn-fa").onclick=()=>switchLang("fa");
     document.getElementById("btn-en").onclick=()=>switchLang("en");
