--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <meta name="keywords" content="دکتر سعید مجتبی‌زاده, Saeed Mojtabazadeh, ژئوتکنیک, پژوهشگر, نوآوری علمی">
   <meta name="author" content="Saeed Mojtabazadeh">
 
-  <!-- ✅ Favicon استاندارد دایره‌ای -->
   <link rel="icon" type="image/png" sizes="512x512" href="https://github.com/mojtabazadeh/saeedmojtabazadeh.github.io/blob/main/favicon.png?raw=true">
-
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;600;800&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
@@ -29,9 +27,7 @@
     }
     body.lang-en{font-family:'Poppins',sans-serif;direction:ltr;text-align:center}
 
-    #particles {
-      position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;
-    }
+    #particles {position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1}
 
     /* ✅ عکس پروفایل با افکت نرم */
     .profile-container {
@@ -96,14 +92,10 @@
       background:rgba(0,0,0,0.25);backdrop-filter:blur(4px);
       animation:fadeInUp 1.4s ease forwards;opacity:0;transform:translateY(10px);
     }
-    .frame-wrapper iframe {
-      width:100%;height:100%;border:none;display:block;border-radius:16px;
-    }
+    .frame-wrapper iframe {width:100%;height:100%;border:none;display:block;border-radius:16px}
 
     /* ✅ فوتر */
-    .footer {
-      font-size:0.8rem;margin-top:18px;opacity:0.7;
-    }
+    .footer {font-size:0.8rem;margin-top:18px;opacity:0.7}
     .footer a {color:white;text-decoration:none}
 
     /* ✅ دکمه زبان */
@@ -120,14 +112,12 @@
       background:rgba(255,255,255,0.3);transform:scale(1.05);
     }
 
-    /* ✅ افکت تغییر زبان (Flip+Blur) */
-    body.switching {
-      animation:langFlip 0.8s ease forwards;
-    }
-    @keyframes langFlip {
-      0% {transform:rotateY(0deg);filter:blur(0px) brightness(1)}
-      50%{transform:rotateY(90deg);filter:blur(3px) brightness(1.3)}
-      100%{transform:rotateY(0deg);filter:blur(0px) brightness(1)}
+    /* ✅ افکت تغییر زبان محو شونده */
+    .fade-switch {animation:fadeSwitch 0.6s ease}
+    @keyframes fadeSwitch {
+      0% {opacity:1;filter:blur(0px)}
+      50%{opacity:0;filter:blur(4px)}
+      100%{opacity:1;filter:blur(0px)}
     }
 
     @keyframes fadeInUp {to {opacity:1;transform:translateY(0)}}
@@ -172,7 +162,6 @@
   </div>
 
   <script>
-    // ✅ داده زبان‌ها
     const data = {
       fa:{title:"مسیر علم و زندگی",sub:"روایت علم، اندیشه و نوآوری دکتر سعید مجتبی‌زاده",links:[
         {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
@@ -210,7 +199,7 @@
     }
 
     function switchLang(lang){
-      document.body.classList.add("switching");
+      document.body.classList.add("fade-switch");
       setTimeout(()=>{
         mainTitle.textContent=data[lang].title;
         subTitle.textContent=data[lang].sub;
@@ -222,8 +211,8 @@
           document.body.classList.remove("lang-en");
           document.documentElement.dir="rtl";
         }
-        document.body.classList.remove("switching");
-      },400);
+      },300);
+      setTimeout(()=>document.body.classList.remove("fade-switch"),600);
     }
 
     buildLinks("fa");
