--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>مسیر علم و زندگی: روایت دکتر سعید مجتبی‌زاده</title>
+  <title>دکتر سعید مجتبی‌زاده</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
   <meta name="description" content="پایگاه رسمی دکتر سعید مجتبی‌زاده | روایت مسیر علم و زندگی در پژوهش و نوآوری.">
   <meta name="keywords" content="دکتر سعید مجتبی‌زاده, Saeed Mojtabazadeh, ژئوتکنیک, پژوهشگر, نوآوری علمی">
@@ -147,8 +147,8 @@
   </div>
 
   <div class="title-wrapper">
-    <h1 class="title-line" id="main-title">مسیر علم و زندگی</h1>
-    <h2 class="title-sub" id="sub-title">روایت علم، اندیشه و نوآوری دکتر سعید مجتبی‌زاده</h2>
+    <h1 class="title-line" id="main-title">دکتر سعید مجتبی‌زاده</h1>
+    <h2 class="title-sub" id="sub-title">اولین فوق‌دکتری مهندسی ژئوتکنیک در ایران</h2>
   </div>
 
   <div class="link-bar" id="links"></div>
@@ -173,7 +173,7 @@
 
     // ✅ داده زبان‌ها
     const data = {
-      fa:{title:"مسیر علم و زندگی",sub:"روایت علم، اندیشه و نوآوری دکتر سعید مجتبی‌زاده",links:[
+      fa:{title:"دکتر سعید مجتبی‌زاده",sub:"اولین فوق‌دکتری مهندسی ژئوتکنیک در ایران",links:[
         {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
         {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
         {text:"پایگاه مطالعات",href:"http://www.smojtabazadeh.ir/"},
@@ -183,7 +183,7 @@
         {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
         {text:"پایگاه اورکید",href:"https://orcid.org/0000-0001-8508-4837"},
       ]},
-      en:{title:"The Professional Journey",sub:"of Dr. Saeed Mojtabazadeh",links:[
+      en:{title:"Dr. Saeed Mojtabazadeh",sub:"The pioneering geotechnical engineering postdoctoral researcher in Iran",links:[
         {text:"Personal Website",href:"http://mojtabazadeh.ir/"},
         {text:"Research Articles",href:"http://www.drmojtabazadeh.ir/"},
         {text:"Study Hub",href:"http://www.smojtabazadeh.ir/"},
