--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
 
   <style>   
     *{box-sizing:border-box;margin:0;padding:0}
-    html,body{
-      width:100%;height:100%;
-      overflow-x:hidden;
-    }
+    html,body{width:100%;height:100%;overflow-x:hidden}
     body {
       font-family:'Vazirmatn',sans-serif;
       background:#000;
@@ -26,7 +23,6 @@
       flex-direction:column;
       align-items:center;
       padding:20px 10px 40px;
-      transition:all 0.6s ease;
       transform-origin:0 0;
     }
     body.lang-en{font-family:'Poppins',sans-serif;direction:ltr;text-align:center}
@@ -40,10 +36,7 @@
       animation:floatMove 6s ease-in-out infinite;
     }
     .profile-container img {width:100%;height:100%;object-fit:cover;display:block}
-    @keyframes floatMove {
-      0%,100%{transform:translateY(0)}
-      50%{transform:translateY(-6px)}
-    }
+    @keyframes floatMove {0%,100%{transform:translateY(0)}50%{transform:translateY(-6px)}}
 
     .title-wrapper {
       max-width:90vw;margin-bottom:20px;
@@ -110,22 +103,22 @@
       background:rgba(255,255,255,0.3);transform:scale(1.05);
     }
 
-    /* ✅ افکت تغییر زبان خیلی نرم */
-    .smooth-switch {
-      animation:smoothFadeSlide 0.8s ease;
+    /* ✅ افکت تغییر زبان خیلی نرم و لوکس */
+    body.switching {
+      opacity:0;
+      transform:scale(0.96);
+      filter:blur(2px);
+      transition:all 0.5s ease-in-out;
     }
-    @keyframes smoothFadeSlide {
-      0%{opacity:1;transform:translateX(0)}
-      40%{opacity:0;transform:translateX(20px)}
-      60%{opacity:0;transform:translateX(-20px)}
-      100%{opacity:1;transform:translateX(0)}
+    body.ready {
+      opacity:1;
+      transform:scale(1);
+      filter:blur(0);
+      transition:all 0.5s ease-in-out;
     }
 
     @keyframes fadeInUp {to {opacity:1;transform:translateY(0)}}
-    @keyframes glowPulse {
-      0%,100%{text-shadow:0 0 8px rgba(255,211,108,0.6)}
-      50%{text-shadow:0 0 14px rgba(255,211,108,1)}
-    }
+    @keyframes glowPulse {0%,100%{text-shadow:0 0 8px rgba(255,211,108,0.6)}50%{text-shadow:0 0 14px rgba(255,211,108,1)}}
 
     @media(max-width:480px){
       .profile-container{width:120px;height:120px}
@@ -163,7 +156,6 @@
   </div>
 
   <script>
-
     // ✅ داده زبان‌ها
     const data = {
       fa:{title:"دکتر سعید مجتبی‌زاده",sub:"اولین فوق‌دکتری مهندسی ژئوتکنیک در ایران",links:[
@@ -202,7 +194,8 @@
     }
 
     function switchLang(lang){
-      document.body.classList.add("smooth-switch");
+      document.body.classList.remove("ready");
+      document.body.classList.add("switching");
       setTimeout(()=>{
         mainTitle.textContent=data[lang].title;
         subTitle.textContent=data[lang].sub;
@@ -214,11 +207,13 @@
           document.body.classList.remove("lang-en");
           document.documentElement.dir="rtl";
         }
-      },300);
-      setTimeout(()=>document.body.classList.remove("smooth-switch"),800);
+        document.body.classList.remove("switching");
+        document.body.classList.add("ready");
+      },400);
     }
 
     buildLinks("fa");
+    document.body.classList.add("ready");
     document.getElementById("btn-fa").onclick=()=>switchLang("fa");
     document.getElementById("btn-en").onclick=()=>switchLang("en");
 
