--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
   <script>
     // ✅ داده زبان‌ها
     const data = {
-      fa:{title:"دکتر سعید مجتبی‌زاده",sub:"اولین فوق‌دکتری مهندسی ژئوتکنیک در ایران",links:[
+      fa:{title:"دکتر سعید مجتبی‌زاده",sub:"فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای",links:[
         {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
         {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
         {text:"پایگاه مطالعات",href:"http://www.smojtabazadeh.ir/"},
@@ -172,7 +172,7 @@
         {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
         {text:"پایگاه اورکید",href:"https://orcid.org/0000-0001-8508-4837"},
       ]},
-      en:{title:"Dr. Saeed Mojtabazadeh",sub:"Iran's first geotechnical engineering postdoc",links:[
+      en:{title:"Dr. Saeed Mojtabazadeh",sub:"Postdoctoral Fellow in Geotechnical Engineering",links:[
         {text:"Personal Website",href:"http://mojtabazadeh.ir/"},
         {text:"Research Articles",href:"http://www.drmojtabazadeh.ir/"},
         {text:"Study Hub",href:"http://www.smojtabazadeh.ir/"},
