--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
   <div class="title-wrapper">
     <h1 class="title-line" id="main-title">دکتر سعید مجتبی‌زاده</h1>
-    <h2 class="title-sub" id="sub-title">اولین فوق‌دکتری مهندسی ژئوتکنیک در ایران</h2>
+    <h2 class="title-sub" id="sub-title">فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای</h2>
   </div>
 
   <div class="link-bar" id="links"></div>
