--- a/index.html
+++ b/index.html
@@ -38,12 +38,20 @@
     #particles {position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1}
 
     .profile-container {
-      width:150px;height:150px;margin:25px auto 16px;
-      border-radius:50%;overflow:hidden;
+      width:150px;
+      aspect-ratio:1 / 1; /* ✅ دایره‌ای ماندن حتی با زوم */
+      margin:25px auto 16px;
+      border-radius:50%;
+      overflow:hidden;
       box-shadow:0 8px 22px rgba(255,220,150,0.5);
       animation:floatMove 6s ease-in-out infinite;
     }
-    .profile-container img {width:100%;height:100%;object-fit:cover;display:block}
+    .profile-container img {
+      width:100%;
+      height:100%;
+      object-fit:cover;
+      display:block;
+    }
     @keyframes floatMove {
       0%,100%{transform:translateY(0)}
       50%{transform:translateY(-6px)}
@@ -131,7 +139,10 @@
     }
 
     @media(max-width:480px){
-      .profile-container{width:120px;height:120px}
+      .profile-container{
+        width:120px;
+        aspect-ratio:1 / 1; /* ✅ برای موبایل هم اضافه شد */
+      }
       .link-bar{gap:6px}
       .link-bar a{padding:6px 10px}
     }
@@ -222,7 +233,6 @@
 
     const savedLang=localStorage.getItem("lang")||"fa";
     switchLang(savedLang);
-
     document.getElementById("btn-fa").onclick=()=>switchLang("fa");
     document.getElementById("btn-en").onclick=()=>switchLang("en");
 
