--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
       flex-direction:column;
       align-items:center;
       padding:20px 10px 40px;
-      transition:all 0.6s ease;
-      transform-origin:0 0;
+      /* ❌ هیچ transform یا scale روی body اعمال نشود */
     }
     body.lang-en{font-family:'Poppins',sans-serif;direction:ltr;text-align:center}
 
@@ -122,14 +121,15 @@
       background:rgba(255,255,255,0.3);transform:scale(1.05);
     }
 
+    /* ✅ افکت تغییر زبان */
     .smooth-switch {
-      animation:smoothFadeSlide 0.9s ease;
+      animation: smoothFadeSlide 0.9s ease;
     }
     @keyframes smoothFadeSlide {
       0%{opacity:1;transform:translateY(0)}
-      40%{opacity:0;transform:translateY(-15px) scale(0.98)}
-      60%{opacity:0;transform:translateY(15px) scale(1.02)}
-      100%{opacity:1;transform:translateY(0) scale(1)}
+      40%{opacity:0;transform:translateY(-15px)}
+      60%{opacity:0;transform:translateY(15px)}
+      100%{opacity:1;transform:translateY(0)}
     }
 
     @keyframes fadeInUp {to {opacity:1;transform:translateY(0)}}
