--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <title>دکتر سعید مجتبی‌زاده</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
-  <meta name="description" content="پایگاه رسمی دکتر سعید مجتبی‌زاده | روایت مسیر علم و زندگی در پژوهش و نوآوری.">
+  <meta name="description" content="اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران">
   <meta name="keywords" content="دکتر سعید مجتبی‌زاده, Saeed Mojtabazadeh, ژئوتکنیک, پژوهشگر, نوآوری علمی">
   <meta name="author" content="Saeed Mojtabazadeh">
 
   <meta property="og:title" content="دکتر سعید مجتبی‌زاده">
-  <meta property="og:description" content="پایگاه رسمی دکتر سعید مجتبی‌زاده | روایت مسیر علم و زندگی در پژوهش و نوآوری.">
+  <meta property="og:description" content="پایگاه دکتر سعید مجتبی‌زاده">
   <meta property="og:image" content="https://bayanbox.ir/view/6333081801587349279/Saeed2.jpg">
   <meta property="og:url" content="http://www.mojtabazadeh.ir/">
   <meta name="twitter:card" content="summary_large_image">
@@ -34,7 +34,6 @@
 
     #particles {position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1}
 
-    /* ✅ تصویر پروفایل دایره‌ای با SVG ماسک */
     .profile-container {
       width:150px;
       height:150px;
