--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         {text:"پایگاه اَپرچِر",href:"https://www.mojtabazadeh-hasanlouei.ir/"},
         {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
         {text:"پروفایل اورکید",href:"https://orcid.org/0000-0001-8508-4837"},
-        {text:"پایگاه انگلیسی",href:"https://www.mojtabade.ir/"},
+        {text:"پایگاه انگلیسی",href:"https://www.mojtabazade.ir/"},
       ]},
       en:{title:"Dr. Saeed Mojtabazadeh",sub:"Postdoctoral Fellow in Geotechnical Engineering",links:[
         {text:"Personal Website",href:"http://mojtabazadeh.ir/"},
@@ -201,7 +201,7 @@
         {text:"Aperture Hub",href:"https://www.mojtabazadeh-hasanlouei.ir/"},
         {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
         {text:"ORCID Profile",href:"https://orcid.org/0000-0001-8508-4837"},
-        {text:"English Website",href:"https://www.mojtabade.ir/"},
+        {text:"English Website",href:"https://www.mojtabazade.ir/"},
       ]}
     };
 
