--- a/index.html
+++ b/index.html
@@ -195,13 +195,13 @@
         {text:"پایگاه انگلیسی",href:"https://www.mojtabazade.ir/"},
       ]},
       en:{title:"Dr. Saeed Mojtabazadeh",sub:"Postdoctoral Fellow in Geotechnical Engineering",links:[
-        {text:"Personal Website",href:"http://mojtabazadeh.ir/"},
-        {text:"Research Articles",href:"http://www.drmojtabazadeh.ir/"},
+        {text:"Website",href:"http://mojtabazadeh.ir/"},
+        {text:"Researches",href:"http://www.drmojtabazadeh.ir/"},
         {text:"Study Hub",href:"http://www.smojtabazadeh.ir/"},
         {text:"Instagallery",href:"https://www.instagallery.ir/"},
-        {text:"Aperture Hub",href:"https://www.mojtabazadeh-hasanlouei.ir/"},
+        {text:"Aperture",href:"https://www.mojtabazadeh-hasanlouei.ir/"},
         {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
-        {text:"ORCID Profile",href:"https://orcid.org/0000-0001-8508-4837"},
+        {text:"ORCID",href:"https://orcid.org/0000-0001-8508-4837"},
         {text:"English Website",href:"https://www.mojtabazade.ir/"},
       ]}
     };
