--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
   <div class="title-wrapper">
     <h1 class="title-line" id="main-title">دکتر سعید مجتبی‌زاده</h1>
-    <h2 class="title-sub" id="sub-title">فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای</h2>
+    <h2 class="title-sub" id="sub-title">اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران</h2>
   </div>
 
   <div class="link-bar" id="links"></div>
@@ -194,7 +194,7 @@
         {text:"پروفایل اورکید",href:"https://orcid.org/0000-0001-8508-4837"},
         {text:"پایگاه انگلیسی",href:"https://www.mojtabazade.ir/"},
       ]},
-      en:{title:"Dr. Saeed Mojtabazadeh",sub:"Postdoctoral Fellow in Geotechnical Engineering",links:[
+      en:{title:"Dr. Saeed Mojtabazadeh",sub:"Postdoc Fellow in Geotechnical Engineering",links:[
         {text:"Website",href:"http://mojtabazadeh.ir/"},
         {text:"Researches",href:"http://www.drmojtabazadeh.ir/"},
         {text:"Study Hub",href:"http://www.smojtabazadeh.ir/"},
